[package]
name = "ldapfill"
version = "0.1.0"
edition = "2021"
description="Simple tool to generate (many) ldap entries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
indicatif = "0.17.3"
ldap3 = "0.11.1"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
